--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.81.227.111:9000/</sonar.host.url>
+		<sonar.host.url>http://54.210.74.225:9000/</sonar.host.url>
 		<sonar.login>linux</sonar.login>  
-		<sonar.login>e317d5452db5da5e841a43b36b23ac1700088cb0</sonar.login>
+		<sonar.login>46a6198fc83f005068419785237842f849cb5a54</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>LION TECH ACADEMY Releases Nexus Repository</name>
-	      <url>http://52.91.49.162:8081/repository/great1/</url>
+	      <url>http://18.209.44.72:8081/repository/Sunday-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>LION TECH ACADEMY Snapshot Nexus Repository </name>
-	      <url>http://52.91.49.162:8081/repository/great2/</url>
+	      <url>http://18.209.44.72:8081/repository/sunday-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
